Assert failure in Bevel code #49296

Closed
opened 2016-09-08 15:20:43 +02:00 by Sergey Sharybin · 5 comments

System Information

Linux Debian stable, GTX1080.

Blender Version

Broken: Current master, compiled in debug
Worked: Don't feel compiling debug versions of all previous Blenders, in release build the isue does not happen

Short description of error

Blender asserts from with bevel code when opening the attached file:

P392: Bevel stacktrace

#0  0x00007ffff460e067 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#1  0x00007ffff460f448 in __GI_abort () at abort.c:89
#2  0x000000000141b574 in mesh_vert_canon (vm=0x7fffc373e1d0, i=2, j=1, k=5) at /home/sergey/src/blender/blender/source/blender/bmesh/tools/bmesh_bevel.c:2079
#3  0x000000000141c290 in interp_vmesh (bp=0x7fffe43f92c0, vm0=0x7fffc373e1d0, nseg=3) at /home/sergey/src/blender/blender/source/blender/bmesh/tools/bmesh_bevel.c:2299
#4  0x000000000141ddd1 in adj_vmesh (bp=0x7fffe43f92c0, bv=0x7fffc371afa8) at /home/sergey/src/blender/blender/source/blender/bmesh/tools/bmesh_bevel.c:2719
#5  0x000000000141fe6d in bevel_build_rings (bp=0x7fffe43f92c0, bm=0x7fffc52e8f08, bv=0x7fffc371afa8) at /home/sergey/src/blender/blender/source/blender/bmesh/tools/bmesh_bevel.c:2883
#6  0x000000000142291a in build_vmesh (bp=0x7fffe43f92c0, bm=0x7fffc52e8f08, bv=0x7fffc371afa8) at /home/sergey/src/blender/blender/source/blender/bmesh/tools/bmesh_bevel.c:3357
#7  0x00000000014331a3 in BM_mesh_bevel (bm=0x7fffc52e8f08, offset=0.00849999767, offset_type=0, segments=3, profile=0.5, vertex_only=false, use_weights=false, limit_offset=true, dvert=0x0, vertex_group=-1, mat=-1, loop_slide=true)
    at /home/sergey/src/blender/blender/source/blender/bmesh/tools/bmesh_bevel.c:4530
#8  0x00000000012dac8d in applyModifier (md=0x7fffd2ceba48, ob=0x7fffd2cf1008, dm=0x7fffc53e3008, UNUSED_flag=(MOD_APPLY_USECACHE | MOD_APPLY_ALLOW_GPU)) at /home/sergey/src/blender/blender/source/blender/modifiers/intern/MOD_bevel.c:175
#9  0x0000000001767b1f in modwrap_applyModifier (md=0x7fffd2ceba48, ob=0x7fffd2cf1008, dm=0x7fffc53e3008, flag=(MOD_APPLY_USECACHE | MOD_APPLY_ALLOW_GPU)) at /home/sergey/src/blender/blender/source/blender/blenkernel/intern/modifier.c:744
#10 0x000000000160c1dc in mesh_calc_modifiers (scene=0x7fffe816e008, ob=0x7fffd2cf1008, inputVertexCos=0x0, useRenderParams=false, useDeform=1, need_mapping=false, dataMask=637534217, index=-1, useCache=true, build_shapekey_layers=false, allow_gpu=true, 
    r_deform=0x7fffd2cf1518, r_final=0x7fffd2cf1520) at /home/sergey/src/blender/blender/source/blender/blenkernel/intern/DerivedMesh.c:2058
#11 0x000000000160e337 in mesh_build_data (scene=0x7fffe816e008, ob=0x7fffd2cf1008, dataMask=637534217, build_shapekey_layers=false, need_mapping=false) at /home/sergey/src/blender/blender/source/blender/blenkernel/intern/DerivedMesh.c:2611
#12 0x000000000160e730 in makeDerivedMesh (scene=0x7fffe816e008, ob=0x7fffd2cf1008, em=0x0, dataMask=637534217, build_shapekey_layers=false) at /home/sergey/src/blender/blender/source/blender/blenkernel/intern/DerivedMesh.c:2708
#13 0x000000000179d66e in BKE_object_handle_data_update (eval_ctx=0x7fffe6cbcd48, scene=0x7fffe816e008, ob=0x7fffd2cf1008) at /home/sergey/src/blender/blender/source/blender/blenkernel/intern/object_update.c:201
#14 0x0000000001793cda in BKE_object_handle_update_ex (eval_ctx=0x7fffe6cbcd48, scene=0x7fffe816e008, ob=0x7fffd2cf1008, rbw=0x0, do_proxy_update=false) at /home/sergey/src/blender/blender/source/blender/blenkernel/intern/object.c:2692
#15 0x00000000017e873f in scene_update_object_func (pool=0x7fffecaf3208, taskdata=0x7fffc6137c08, threadid=6) at /home/sergey/src/blender/blender/source/blender/blenkernel/intern/scene.c:1497
#16 0x0000000001b0c831 in task_scheduler_thread_run (thread_p=0x7ffff17f96d8) at /home/sergey/src/blender/blender/source/blender/blenlib/intern/task.c:326
#17 0x00007ffff5ec90a4 in start_thread (arg=0x7fffe43fa700) at pthread_create.c:309
#18 0x00007ffff46c187d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Exact steps for others to reproduce the error

Just open this file: test.blend

**System Information** Linux Debian stable, GTX1080. **Blender Version** Broken: Current master, compiled in debug Worked: Don't feel compiling debug versions of all previous Blenders, in release build the isue does not happen **Short description of error** Blender asserts from with bevel code when opening the attached file: [P392: Bevel stacktrace](https://archive.blender.org/developer/P392.txt) ``` #0 0x00007ffff460e067 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56 #1 0x00007ffff460f448 in __GI_abort () at abort.c:89 #2 0x000000000141b574 in mesh_vert_canon (vm=0x7fffc373e1d0, i=2, j=1, k=5) at /home/sergey/src/blender/blender/source/blender/bmesh/tools/bmesh_bevel.c:2079 #3 0x000000000141c290 in interp_vmesh (bp=0x7fffe43f92c0, vm0=0x7fffc373e1d0, nseg=3) at /home/sergey/src/blender/blender/source/blender/bmesh/tools/bmesh_bevel.c:2299 #4 0x000000000141ddd1 in adj_vmesh (bp=0x7fffe43f92c0, bv=0x7fffc371afa8) at /home/sergey/src/blender/blender/source/blender/bmesh/tools/bmesh_bevel.c:2719 #5 0x000000000141fe6d in bevel_build_rings (bp=0x7fffe43f92c0, bm=0x7fffc52e8f08, bv=0x7fffc371afa8) at /home/sergey/src/blender/blender/source/blender/bmesh/tools/bmesh_bevel.c:2883 #6 0x000000000142291a in build_vmesh (bp=0x7fffe43f92c0, bm=0x7fffc52e8f08, bv=0x7fffc371afa8) at /home/sergey/src/blender/blender/source/blender/bmesh/tools/bmesh_bevel.c:3357 #7 0x00000000014331a3 in BM_mesh_bevel (bm=0x7fffc52e8f08, offset=0.00849999767, offset_type=0, segments=3, profile=0.5, vertex_only=false, use_weights=false, limit_offset=true, dvert=0x0, vertex_group=-1, mat=-1, loop_slide=true) at /home/sergey/src/blender/blender/source/blender/bmesh/tools/bmesh_bevel.c:4530 #8 0x00000000012dac8d in applyModifier (md=0x7fffd2ceba48, ob=0x7fffd2cf1008, dm=0x7fffc53e3008, UNUSED_flag=(MOD_APPLY_USECACHE | MOD_APPLY_ALLOW_GPU)) at /home/sergey/src/blender/blender/source/blender/modifiers/intern/MOD_bevel.c:175 #9 0x0000000001767b1f in modwrap_applyModifier (md=0x7fffd2ceba48, ob=0x7fffd2cf1008, dm=0x7fffc53e3008, flag=(MOD_APPLY_USECACHE | MOD_APPLY_ALLOW_GPU)) at /home/sergey/src/blender/blender/source/blender/blenkernel/intern/modifier.c:744 #10 0x000000000160c1dc in mesh_calc_modifiers (scene=0x7fffe816e008, ob=0x7fffd2cf1008, inputVertexCos=0x0, useRenderParams=false, useDeform=1, need_mapping=false, dataMask=637534217, index=-1, useCache=true, build_shapekey_layers=false, allow_gpu=true, r_deform=0x7fffd2cf1518, r_final=0x7fffd2cf1520) at /home/sergey/src/blender/blender/source/blender/blenkernel/intern/DerivedMesh.c:2058 #11 0x000000000160e337 in mesh_build_data (scene=0x7fffe816e008, ob=0x7fffd2cf1008, dataMask=637534217, build_shapekey_layers=false, need_mapping=false) at /home/sergey/src/blender/blender/source/blender/blenkernel/intern/DerivedMesh.c:2611 #12 0x000000000160e730 in makeDerivedMesh (scene=0x7fffe816e008, ob=0x7fffd2cf1008, em=0x0, dataMask=637534217, build_shapekey_layers=false) at /home/sergey/src/blender/blender/source/blender/blenkernel/intern/DerivedMesh.c:2708 #13 0x000000000179d66e in BKE_object_handle_data_update (eval_ctx=0x7fffe6cbcd48, scene=0x7fffe816e008, ob=0x7fffd2cf1008) at /home/sergey/src/blender/blender/source/blender/blenkernel/intern/object_update.c:201 #14 0x0000000001793cda in BKE_object_handle_update_ex (eval_ctx=0x7fffe6cbcd48, scene=0x7fffe816e008, ob=0x7fffd2cf1008, rbw=0x0, do_proxy_update=false) at /home/sergey/src/blender/blender/source/blender/blenkernel/intern/object.c:2692 #15 0x00000000017e873f in scene_update_object_func (pool=0x7fffecaf3208, taskdata=0x7fffc6137c08, threadid=6) at /home/sergey/src/blender/blender/source/blender/blenkernel/intern/scene.c:1497 #16 0x0000000001b0c831 in task_scheduler_thread_run (thread_p=0x7ffff17f96d8) at /home/sergey/src/blender/blender/source/blender/blenlib/intern/task.c:326 #17 0x00007ffff5ec90a4 in start_thread (arg=0x7fffe43fa700) at pthread_create.c:309 #18 0x00007ffff46c187d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111 ``` **Exact steps for others to reproduce the error** Just open this file: [test.blend](https://archive.blender.org/developer/F356116/test.blend)
Howard Trickey was assigned by Sergey Sharybin 2016-09-08 15:20:43 +02:00
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @arihunter88

Added subscriber: @arihunter88

This issue was referenced by 0f8f494d63

This issue was referenced by 0f8f494d637cab3802239120456c3eb58011cdff
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49296
No description provided.